Fix drag being initiated by double click on a panel item when cursor is on the edge of a screen

We need to adjust the position of QEvent::MouseButtonDblClick too.
QGuiApplication synthetizes QEvent::MouseButtonDblClick after QEvent::MouseButtonPress which Qt Quick's DragHandler also receives.
If QEvent::MouseButtonDblClick's positions is not adjusted DragHandler will see the difference
between QEventPoint's scenePosition and scenePressPosition (which seems to be taken from previous QEvent::MouseButtonPress?),
and initiate drag.

BUG: 501922